kubernetes/robin/apps/database/crunchy-postgres-operator/pgadmin/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
spec:
  hostnames:
    - pgadmin.${CLUSTER_DOMAIN}
  parentRefs:
    - name: envoy
      namespace: network
  rules:
    - backendRefs:
        - name: pgadmin
          port: 5050
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: database
spec:
  ports:
    - name: pgadmin
      port: 5050
      protocol: TCP
      targetPort: 5050
  selector:
    postgres-operator.crunchydata.com/pgadmin: pgadmin
  type: ClusterIP
